# api/router.go
@@ -13,6 +13,14 @@ import (
 	"log/slog"
 )
 
+// @title Api-Geteway service for Turk-SM
+// @version 1.0
+// @description API for Api-Geteway Service
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @schemes http
+// @BasePath
 func NewRouter(cfg *config.Config, log *slog.Logger, casbin *casbin.Enforcer) *gin.Engine {
 	router := gin.Default()
 
